Fix line height for wrapping multi-line titles. Fixes #243. props kpdesign
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@148 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/blog-wp4.css
+++ b/wordpress.org/public_html/style/blog-wp4.css
@@ -48,6 +48,7 @@
 	margin-bottom: 20px;
 	font-size: 36px;
 	font-weight: 300;
+	line-height: 1.3;
 }
 
 #pagebody .meta {
